--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@400;500;600;700&display=swap');
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #020617;
+        background: linear-gradient(135deg, #0f172a 0%, #020617 50%, #0a0e1a 100%);
         color: #f8fafc;
       }
       ::-webkit-scrollbar {
@@ -70,5 +70,6 @@
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/main.tsx"></script>
   </body>
 </html>
